<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintLayoutDialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/etDetail"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/etDetail"
        android:text=""
        android:textColorHint="#78909C"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints=""
        android:inputType="text" />

    <EditText
        android:id="@+id/etPrice"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:hint="@string/etPrice"
        android:inputType="numberDecimal"
        android:text=""
        android:textColorHint="#78909C"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <RadioGroup
        android:id="@+id/rbtnGroup"
        android:layout_width="186dp"
        android:layout_height="130dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDetail">

        <RadioButton
            android:id="@+id/rbtnIncome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/rbtnIncome" />

        <RadioButton
            android:id="@+id/rbtnExpense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbtnExpense" />

    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>